Testing suite update with index system prompt

--- a/test/static/index.html
+++ b/test/static/index.html
@@ -13,6 +13,10 @@
                 <p>Please upload a CSV or GeoJSON file to begin.</p>
                 <input type="file" id="fileInput" accept=".csv,.geojson" />
                 <textarea id="fileDescription" placeholder="Optional: Add file description..."></textarea>
+                <div class="checkbox-container">
+                    <input type="checkbox" id="aiSearchIndex" checked/>
+                    <label for="aiSearchIndex">Use AI Search Index</label>
+                </div>
                 <div id="fileStatus"></div>
             </div>
             
